# tudin

./: pyproject.toml
tudin/: __main__.py
