[tool.poetry]
name = "tudin"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
libcst = "^0.4.9"
rich = "^13.0.0"
rich-argparse = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tudin = "tudin.__main__:_app"
